Fix measurement of characters causing a horizontal scrollbar

--- a/BlazorTextEditor.RazorLib/wwwroot/blazorTextEditor.css
+++ b/BlazorTextEditor.RazorLib/wwwroot/blazorTextEditor.css
@@ -88,6 +88,13 @@
     color: var(--bte_json-property-value-color);
 }
 
+.bte_measure-character-width-and-row-height-wrapper {
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    overflow: hidden;
+}
+
 .bte_measure-character-width-and-row-height {
     top: 0;
     left: 0;
